added updated simulation lab

--- a/labs/01_simulation/01_simulations.ipynb
+++ b/labs/01_simulation/01_simulations.ipynb
@@ -109,7 +109,7 @@
    "source": [
     "### Exercises to review plotting\n",
     "\n",
-    "Reference material is [here](https://aclarke.uoregon.edu:8000/user/[YOUR_USER_NAME_HERE]/notebooks/pythonic-science/chapters/00_inductive-python/plotting_reference.ipynb).\n",
+    "Reference material is [here](https://github.com/harmsm/pythonic-science/blob/master/reference/plotting_reference.ipynb).\n",
     "\n",
     "+ On the same graph, plot: $y = x$, $y = x^2$, $y = x^{3}$ ... $y = x^{10}$ for $x \\in [-10,10]$.\n"
    ]
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Plot $y = e^{x}$ for $x \\in [-5,5]$.  Make two different graphs (in the same cell!), one using a linear $x$ scale, one using a $ln(x)$ x scale.  (Hint: use `plt.show()`). \n"
+    "+ Plot $y = e^{x}$ for $x \\in [-5,5]$.  Make two different graphs (in the same cell!), one using a linear $y$ scale, one using a log $y$ scale.  (Hint: use `plt.show()`). \n"
    ]
   },
   {
