--- a/labs/06_microscopy/06_counting-puncta.ipynb
+++ b/labs/06_microscopy/06_counting-puncta.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -25,27 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video width=\"600\" height=\"600\" controls loop autoplay>\n",
-       "  <source src=\"videos/control.mp4\" type=\"video/mp4\">\n",
-       "</video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%HTML\n",
     "<video width=\"600\" height=\"600\" controls loop autoplay>\n",
@@ -55,26 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video width=\"600\" height=\"600\" controls loop autoplay>\n",
-       "  <source src=\"videos/experimental.mp4\" type=\"video/mp4\">\n",
-       "</video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%HTML\n",
     "<video width=\"600\" height=\"600\" controls loop autoplay>\n",
@@ -87,22 +52,22 @@
    "metadata": {},
    "source": [
     "### Task\n",
-    "The red globs are chromosomes, the green dots are double strand breaks.  Your goal is to count the number of double strand breaks per chromosome under these treatment conditions.\n",
+    "The red globs are chromosomes inside nuclei, the green dots are double strand breaks.  Your goal is to count the number of double strand breaks per nucleus under these treatment conditions.\n",
     "\n",
-    "+ Choose 5 chromsomes from the control worm and 5 chromosomes from the experimental worm.\n",
-    "+ Count the number of bright green puncta on each chromosome.\n",
+    "+ Choose 5 nuclei from the control worm and 5 nuclei from the experimental worm.\n",
+    "+ Count the number of bright green puncta in each nucleus.\n",
     "+ Report the mean and standard deviation of the number of puncta per chromosome between your 5 control and 5 experimental chromosomes.  \n",
     "+ Are the differences you observed statistically significant? (A t-test seems like a reasonable way to go about this...)\n",
     "\n",
     "### Hints:\n",
     "\n",
-    "+ Define a circular mask for each chromosome you want to study.\n",
+    "+ Define a circular mask for each nucleus you want to study.\n",
     "+ The *same* puncta can occur across multiple slices, but not all puncta appear in all slices.  (This is a 3D chromosome blob).  You'll have to make sure you don't count the same point twice.  \n",
     "\n",
     "### Data\n",
     "The collection of images are available here:\n",
     "\n",
-    "http://spock.uoregon.edu/worm-images.zip\n",
+    "https://www.dropbox.com/s/dry59l6h14cqkkj/worm-images.zip?dl=0\n",
     "\n",
     "If you unzip the directory, it has the following files and directories.\n",
     "\n",
@@ -128,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -151,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
