added updated molecular structure lab

--- a/labs/03_molecular-structure/03_structure-files.ipynb
+++ b/labs/03_molecular-structure/03_structure-files.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -29,11 +27,11 @@
     "+ Two important pieces of metadata for a crystal structure are $R$ and $R_{free}$.  These measure how well the crystallographic model fits experimental data used to generate the model.  The location of these numbers are indicated in pdb files by the following text.\n",
     "\n",
     "  ```\n",
-    "  R VALUE          (WORKING SET, NO CUTOFF)\n",
+    "  REMARK   3   R VALUE     (WORKING + TEST SET)\n",
     "\n",
     "  and \n",
     "\n",
-    "  FREE R VALUE                  (NO CUTOFF)\n",
+    "  REMARK   3   FREE R VALUE\n",
     "  ```\n",
     "\n",
     "  Write a function called **get_R** that takes a string specifying a pdb file as an argument, extracts $R$ and $R_{free}$ from the file, and then returns them as a tuple of floats `(R,R_free)`.\n",
@@ -43,24 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "R_values = get_R(\"1g9u.pdb\")\n",
-    "assert round(R_values[0],2) == 0.17\n",
-    "assert round(R_values[1],2) == 0.23"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -72,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -95,23 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "com = center_of_mass(\"1stn.pdb\")\n",
-    "assert round(com[0],1) == 4.8\n",
-    "assert round(com[1],1) == 22.4\n",
-    "assert round(com[2],1) == 14.5"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -121,20 +88,75 @@
     "\n",
     "![hn_definition](https://raw.githubusercontent.com/harmsm/pythonic-science/master/labs/03_molecular-structure/NH_proton.png)\n",
     "\n",
-    "Write a program that adds missing `HN` atoms and writes them out to a pdb file. \n",
-    "   + `HN` will be in the plane formed by `C` atom from the *previous* resiude and the `N` and `CA` from its residue. (gray plane in image).  \n",
-    "   + `{\"C\",\"N\",\"HN\"}` forms an angle of $119\\ ^{\\circ}$.\n",
-    "   + `{\"CA\",\"N\",\"HN\"}` forms an angle of $119\\ ^{\\circ}$.\n",
-    "   + The distance between `N` and `HN` is 1.02 angstrom.\n",
-    "    "
+    "The function below (`calc_hn`) calculates the position of the `HN` atom for the $i^{th}$ residue given the coordinates of the $(i-1)^{th}$ `C` atom (red sphere in picture), the $i^{th}$ `N` atom (cyan sphere in picture) and the $i^{th}$ `CA` atom (cyan sphere in picture).  Write a program that takes a pdb file as input, calculates the position of each `HN` atom, and then writes out a new pdb file with the `HN` atoms written out as lines just after the `N` atoms.  This means the line encoding the position of `N` for residue 46 would be followed by a new line encoding the position of `HN` for residue 46.  You do not have to renumber the atoms in the file (but bonus points if you do).  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def calc_hn(CO_i_minus_one,N_i,CA_i):\n",
+    "    \"\"\"\n",
+    "    Calculate the position of the HN proton. \n",
+    "    \n",
+    "    CO_i_minus_one: array of x,y,z coordinates for *previous* \n",
+    "                    \"C\" atom\n",
+    "    N_i: array of x,y,z coordinates for current \"N\" atom.\n",
+    "    CA_i: array of x,y,z coordinates for current \"CA\" atom.\n",
+    "    \n",
+    "    Returns: x,y,z array for HN proton.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Center on N\n",
+    "    Ca = CA_i           - N_i\n",
+    "    Co = CO_i_minus_one - N_i\n",
+    "\n",
+    "    # Get length of relevant vectors\n",
+    "    length_HN = 1.02\n",
+    "    length_Ca = np.sqrt(np.sum(Ca**2))\n",
+    "    length_Co = np.sqrt(np.sum(Co**2))\n",
+    "\n",
+    "    # Dot product of H and C\n",
+    "    H_dot_C = length_HN*length_Co*np.cos(119.0*np.pi/180.0)\n",
+    "\n",
+    "    xo = Co[0]\n",
+    "    yo = Co[1]\n",
+    "    zo = Co[2]\n",
+    "\n",
+    "    xa = Ca[0]\n",
+    "    ya = Ca[1]\n",
+    "    za = Ca[2]\n",
+    "    \n",
+    "    Q = length_Ca/length_Co\n",
+    "    A = (xo + Q*xa)\n",
+    "    B = (yo + Q*ya)\n",
+    "    C = (zo + Q*za)\n",
+    "\n",
+    "    xh = H_dot_C/(xo + yo*B/A + zo*C/A)\n",
+    "    yh = xh*B/A\n",
+    "    zh = xh*C/A\n",
+    "\n",
+    "    # Translate HN back to original coordinates\n",
+    "    HN_i = np.array((xh,yh,zh)) + N_i\n",
+    "    \n",
+    "    return HN_i\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -155,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
